Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91130

SIGSYS error in QSystemSemaphore for iOS

XMLWordPrintable

    • iOS/tvOS/watchOS
    • 9661cde1615e21f5b6bbffe3e687cacba247f514 (qt/qtbase/dev) c9c0f5bfa7aad739a6d245dd47adf3bc6cdab8ee (qt/qtbase/6.2)

      In iOS environment, the following code gives SIGSYS error in QSystemSemaphorePrivate::handle(QSystemSemaphore::AccessMode mode).

      QSystemSemaphore sem("market", 3, QSystemSemaphore::Create);
      

      Please refer to qtbug91130-debug-screenshot.png

      Generic semaphore sem_open in the ios can be run without any issues

        1. qtbug91130-debug-screenshot.png
          2.70 MB
          Nahomi Gröhn
        2. qtbug91130.zip
          3 kB
          Nahomi Gröhn
        For Gerrit Dashboard: QTBUG-91130
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            nagrohn Nahomi Gröhn (Inactive)
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes