src/corelib/kernel/qsystemsemaphore_unix.cpp
@@ -89,6 +89,12 @@ void QSystemSemaphorePrivate::setErrorString(const QString &function)
         errorString = QSystemSemaphore::tr("%1: out of resources").arg(function);
         error = QSystemSemaphore::OutOfResources;
         break;
+#if defined(QT_POSIX_IPC)
+    case ENAMETOOLONG:
+        errorString = QSystemSemaphore::tr("%1: key too long").arg(function);
+        error = QSystemSemaphore::KeyError;
+        break;
+#endif
     default:
         errorString = QSystemSemaphore::tr("%1: unknown error %2").arg(function).arg(errno);
         error = QSystemSemaphore::UnknownError;
